@@ -1,3 +1,13 @@
+2007-10-03  Robert Millan  <rmh@aybabtu.com>
+
+	* include/grub/i386/io.h: New file.
+	* commands/i386/pc/play.c (inb): Removed.
+	(outb): Removed.
+	Include grub/cpu/io.h.  Replace inb() with grub_inb() and outb()
+	with grub_outb().
+	* term/i386/pc/serial.c: Likewise.
+	* term/i386/pc/vga.c: Likewise.
+
 2007-10-02  Robert Millan  <rmh@aybabtu.com>
 
 	* conf/i386-efi.rmk (grub_emu_SOURCES): Add util/hostfs.c.
